--- a/services/core-services/biochip-automobile-service/src/main/resources/bootstrap.yaml
+++ b/services/core-services/biochip-automobile-service/src/main/resources/bootstrap.yaml
@@ -4,7 +4,7 @@ spring:
   cloud:
     config:
       enabled: true
-      uri: http//localhost:8090
+      uri: http://localhost:9090
   datasource:
     url: jdbc:mysql://localhost:3306/biochip
     username: root
