--- a/services/core-services/biochip-automobile-service/pom.xml
+++ b/services/core-services/biochip-automobile-service/pom.xml
@@ -58,6 +58,11 @@
 		    <groupId>org.springframework.cloud</groupId>
 		    <artifactId>spring-cloud-starter-bootstrap</artifactId>
 		</dependency>
+		<!-- spring cloud discovery eureka client -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 	</dependencies>
 	
 	<dependencyManagement>
