--- a/services/configuration-services/biochip-config-service/src/main/resources/application.yaml
+++ b/services/configuration-services/biochip-config-service/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     config:
       server:
         git:
-          default-label: gatewayserver
+          default-label: circuitbreaker
           uri: https://github.com/renzinhohn/biochip-microservices
           search-paths: /services/configuration-services/biochip-config-data
   application:
