--- a/services/core-services/biochip-customer-service/src/main/resources/bootstrap.yaml
+++ b/services/core-services/biochip-customer-service/src/main/resources/bootstrap.yaml
@@ -16,4 +16,4 @@ spring:
         physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
       ddl-auto: update
-    show-sql: true
+    show-sql: false
